--- a/springdatajdbc/src/main/resources/application.properties
+++ b/springdatajdbc/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.profiles.active=development
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/springdatajdbc
 spring.datasource.username=root
-spring.datasource.password=namasivaya
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
