--- a/springdatajdbc/src/main/resources/application.properties
+++ b/springdatajdbc/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springdatajdbc
 spring.datasource.username=root
 spring.datasource.password=namasivaya
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## Application URL
+# http://localhost:9090/springdatajdbc/customers/post/addUser
+# http://localhost:9090/springdatajdbc/customers/get/search
+# http://localhost:9090/springdatajdbc/customers/get/
