--- a/springdatajdbc/src/main/resources/application.properties
+++ b/springdatajdbc/src/main/resources/application.properties
@@ -4,10 +4,14 @@ server.port=9090
 spring.profiles.active=development
 #logging.file.path=/Users/velmuruganmani/Documents/log/sts_log
 
+#spring.security.user.name=username
+#spring.security.user.password=password
+#spring.security.user.roles=admin
+
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/springdatajdbc
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=namasivaya
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Application URL
