--- a/springdatajdbc/build.gradle
+++ b/springdatajdbc/build.gradle
@@ -12,6 +12,10 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+    karateVersion = '0.9.6'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -26,8 +30,24 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	
+	testCompile 'com.intuit.karate:karate-junit5:'+karateVersion
+	testCompile 'com.intuit.karate:karate-apache:'+karateVersion
+}
+
+sourceSets {
+    test {
+        resources {
+            srcDir file('src/test/java')
+            exclude '**/*.java'
+        }
+    }
 }
 
 test {
 	useJUnitPlatform()
+	
+	systemProperty "karate.options", System.properties.getProperty("karate.options")
+    systemProperty "karate.env", System.properties.getProperty("karate.env")
+    outputs.upToDateWhen { false }
 }
