Junit test cases

--- a/springdatajdbc/build.gradle
+++ b/springdatajdbc/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.1.0")
+    testCompile 'org.mockito:mockito-junit-jupiter:2.23.4'
 	testCompile 'com.intuit.karate:karate-junit5:'+karateVersion
 	testCompile 'com.intuit.karate:karate-apache:'+karateVersion
 }
@@ -41,7 +44,9 @@ sourceSets {
 
 
 test {
-	useJUnitPlatform()
+	useJUnitPlatform {
+        includeEngines 'junit-jupiter'
+    }
 	systemProperty "karate.options", System.properties.getProperty("karate.options")
     systemProperty "karate.env", System.properties.getProperty("karate.env")
      outputs.upToDateWhen { false }
